<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".activity.AddMembersActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#ffffff">

        <!--<Button-->
        <!--android:id="@+id/btnSave"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:paddingLeft="-18dp"-->
        <!--android:text="SAVE"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textSize="20dp" />-->

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_back"
            android:hint="@string/nameHint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_back"
            android:hint="@string/numberHint"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add"
            android:textColor="@color/white"
            android:theme="@style/AccectButton" />


    </LinearLayout>
</LinearLayout>



