<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.user.groupexpensetracker.activity.AddGroupActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#ffffff">

        <!--<Button-->
        <!--android:id="@+id/btnCreate"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="270dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:text="CREATE"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textSize="20dp" />-->

    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:background="@android:color/darker_gray"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="8dp"-->
                <!--android:text="@string/addPerticipants"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="20sp" />-->
        <!--</LinearLayout>-->


        <EditText
            android:id="@+id/editGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextexpense_bg"
            android:hint="@string/groupName"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/editdescription"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/edittextexpense_bg"
            android:hint="Enter Group Description"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/addParticipants"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittextexpense_bg"
            android:drawableLeft="@drawable/ic_action_search"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />


        </LinearLayout>
    </LinearLayout>
